# librelaxisloader

./: CMakeLists.txt  README.md  crossW64.cmake  main.c  package-win.sh  relaxisloader.c  test.eis3  utils.c  utils.h
doc/: librelaxisloader.doxygen.in  mainpage.txt  readme.md.in
pkgconfig/: librelaxisloader.pc.in
relaxisloader/: relaxisloader.h
